--- a/arch/arm/configs/CPS-MCS341-DSX.1lan_defconfig
+++ b/arch/arm/configs/CPS-MCS341-DSX.1lan_defconfig
@@ -1298,7 +1298,7 @@ CONFIG_WLAN=y
 # CONFIG_RTL8187 is not set
 CONFIG_RTL8188EU=m
 # CONFIG_RTL8192EU is not set
-# CONFIG_RTL8812AU is not set
+CONFIG_RTL8812AU=m
 # CONFIG_MAC80211_HWSIM is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
