6, Feb, 2020 : Merge commit ver.2.3.1.8 my hand manual.

--- a/arch/arm/configs/CPS-ECS341-1.2lan_defconfig
+++ b/arch/arm/configs/CPS-ECS341-1.2lan_defconfig
@@ -335,6 +335,9 @@ CONFIG_CONTEC_MC34X=y
 # CONFIG_MACH_MC341B50 is not set
 CONFIG_MACH_MC342B20=y
 CONFIG_MACH_MC34X_ENABLE_NMI_INTERRUPT=y
+# CONFIG_MACH_MC34X_ENABLE_DUPLICATE_BACKUP is not set
+# CONFIG_MACH_MC34X_NOTUSE_DEBUG_SERIALPORT0 is not set
+# CONFIG_MACH_MC34X_BOOTUP_ENABLE_WATCHDOG_TIMER is not set
 
 #
 # Check LAN TYPE : 2LAN TYPE
