--- a/arch/arm/configs/CPS-MC341-DSX.2lan_defconfig
+++ b/arch/arm/configs/CPS-MC341-DSX.2lan_defconfig
@@ -337,6 +337,8 @@ CONFIG_MACH_MC341B30=y
 CONFIG_MACH_MC341_ENABLE_RTC_CLOCK=y
 CONFIG_MACH_MC34X_ENABLE_NMI_INTERRUPT=y
 # CONFIG_MACH_MC34X_ENABLE_DUPLICATE_BACKUP is not set
+# CONFIG_MACH_MC34X_NOTUSE_DEBUG_SERIALPORT0 is not set
+CONFIG_MACH_MC34X_BOOTUP_ENABLE_WATCHDOG_TIMER=y
 
 #
 # Check LAN TYPE : 2LAN TYPE
