--- a/arch/arm/configs/SV-MCD-MC341.novlan_defconfig
+++ b/arch/arm/configs/SV-MCD-MC341.novlan_defconfig
@@ -336,6 +336,9 @@ CONFIG_MACH_MC341B00=y
 # CONFIG_MACH_MC342B20 is not set
 CONFIG_MACH_MC341_ENABLE_RTC_CLOCK=y
 CONFIG_MACH_MC34X_ENABLE_NMI_INTERRUPT=y
+# CONFIG_MACH_MC34X_ENABLE_DUPLICATE_BACKUP is not set
+# CONFIG_MACH_MC34X_NOTUSE_DEBUG_SERIALPORT0 is not set
+# CONFIG_MACH_MC34X_BOOTUP_ENABLE_WATCHDOG_TIMER is not set
 
 #
 # Check LAN TYPE : NO-VLAN TYPE (Daisy Chain)
