--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,10 @@ branches :
 
 compiler:
   - arm-linux-gnueabi-gcc-4.7 
-  - arm-linux-gnueabi-gcc-5 
+  - arm-linux-gnueabi-gcc-5
+  - arm-linux-gnueabi-gcc-6
+  - arm-linux-gnueabi-gcc-7
+  - arm-linux-gnueabi-gcc-8       
 env:
   - DEFCONF=CPS-MC341-ADSCX.novlan_defconfig
   - DEFCONF=CPS-MC341-ADSCX.1lan_defconfig
@@ -38,6 +41,9 @@ env:
 
 before_install:
   # apt-get install
+  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-8" ]];then GCC_COMP=gcc-8-arm-linux-gnueabi; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-7" ]];then GCC_COMP=gcc-7-arm-linux-gnueabi; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-gnueabi; fi
   - echo  "$GCC_COMP"
