--- a/arch/arm/configs/CPS-MC341-ADSCX.1lan_defconfig
+++ b/arch/arm/configs/CPS-MC341-ADSCX.1lan_defconfig
@@ -262,7 +262,7 @@ CONFIG_ARCH_OMAP=y
 # CONFIG_PLAT_SPEAR is not set
 # CONFIG_ARCH_VT8500 is not set
 # CONFIG_ARCH_ZYNQ is not set
-# CONFIG_GPIO_PCA953X is not set
+CONFIG_GPIO_PCA953X=m
 
 #
 # TI OMAP Common Features
@@ -1549,8 +1549,8 @@ CONFIG_GPIO_SYSFS=y
 # I2C GPIO expanders:
 #
 # CONFIG_GPIO_MAX7300 is not set
-# CONFIG_GPIO_MAX732X is not set
-# CONFIG_GPIO_PCF857X is not set
+CONFIG_GPIO_MAX732X=m
+CONFIG_GPIO_PCF857X=m
 # CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_STMPE is not set
 # CONFIG_GPIO_TWL4030 is not set
