--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ before_install:
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-gnueabi; fi
   - echo  "$GCC_COMP"
+  - ls /etc/apt/
+  - ls /etc/apt/sources.list.d/
   - cat /etc/apt/sources.list.d/official-package-repositories.list
   - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-gnueabi u-boot-tools
   - export CROSS_COMPILE=arm-linux-gnueabi-
