--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_install:
   - echo  "$GCC_COMP"
   - ls /etc/apt/
   - ls /etc/apt/sources.list.d/
-  - cat /etc/apt/sources.list.d/official-package-repositories.list
+  - cat /etc/apt/sources.list.d/pgdg.list
   - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-gnueabi u-boot-tools
   - export CROSS_COMPILE=arm-linux-gnueabi-
   - export ARCH=arm
