--- a/.travis.yml
+++ b/.travis.yml
@@ -49,10 +49,11 @@ before_install:
   - echo  "$GCC_COMP"
   - ls /etc/apt/
   - ls /etc/apt/sources.list.d/
-  - cat /etc/apt/sources.list
   - cat /etc/apt/sources.list.travis-build.bak
   - cat /etc/apt/sources.list.d/pgdg.list
-  - sudo add-apt-repository universe
+  - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
+  - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
+  - cat /etc/apt/sources.list
   - sudo apt-get update
   - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-gnueabi u-boot-tools
   - export CROSS_COMPILE=arm-linux-gnueabi-
