--- a/.travis.yml
+++ b/.travis.yml
@@ -17,27 +17,28 @@ branches :
 
 
 compiler:
-  - arm-linux-gnueabi-gcc-4.7 
-  - arm-linux-gnueabi-gcc-5
-  - arm-linux-gnueabi-gcc-6
-  - arm-linux-gnueabi-gcc-7
+#  - arm-linux-gnueabi-gcc-4.7
+  - arm-linaro-gnueabi-gcc-4.9
+#  - arm-linux-gnueabi-gcc-5
+#  - arm-linux-gnueabi-gcc-6
+#  - arm-linux-gnueabi-gcc-7
 #  - arm-linux-gnueabi-gcc-8       
 env:
   - DEFCONF=CPS-MC341-ADSCX.novlan_defconfig
-  - DEFCONF=CPS-MC341-ADSCX.1lan_defconfig
-  - DEFCONF=CPS-MC341-ADSCX.2lan_defconfig
-  - DEFCONF=CPS-MC341-DSX.novlan_defconfig
-  - DEFCONF=CPS-MC341-DSX.1lan_defconfig
-  - DEFCONF=CPS-MC341-DSX.2lan_defconfig
-  - DEFCONF=CPS-MC341-AX.novlan_defconfig
-  - DEFCONF=CPS-MC341-AX.1lan_defconfig
-  - DEFCONF=CPS-MC341-AX.2lan_defconfig
-  - DEFCONF=CPS-MC341-DS1X.novlan_defconfig
-  - DEFCONF=CPS-MC341-DS1X.1lan_defconfig
-  - DEFCONF=CPS-MC341-DS1X.2lan_defconfig        
-  - DEFCONF=CPS-MCS341-DSX.novlan_defconfig
-  - DEFCONF=CPS-MCS341-DSX.1lan_defconfig
-  - DEFCONF=CPS-MCS341-DSX.2lan_defconfig
+#  - DEFCONF=CPS-MC341-ADSCX.1lan_defconfig
+#  - DEFCONF=CPS-MC341-ADSCX.2lan_defconfig
+#  - DEFCONF=CPS-MC341-DSX.novlan_defconfig
+#  - DEFCONF=CPS-MC341-DSX.1lan_defconfig
+#  - DEFCONF=CPS-MC341-DSX.2lan_defconfig
+#  - DEFCONF=CPS-MC341-AX.novlan_defconfig
+#  - DEFCONF=CPS-MC341-AX.1lan_defconfig
+#  - DEFCONF=CPS-MC341-AX.2lan_defconfig
+#  - DEFCONF=CPS-MC341-DS1X.novlan_defconfig
+#  - DEFCONF=CPS-MC341-DS1X.1lan_defconfig
+#  - DEFCONF=CPS-MC341-DS1X.2lan_defconfig        
+#  - DEFCONF=CPS-MCS341-DSX.novlan_defconfig
+#  - DEFCONF=CPS-MCS341-DSX.1lan_defconfig
+#  - DEFCONF=CPS-MCS341-DSX.2lan_defconfig
 
 before_install:
   # apt-get install
@@ -46,6 +47,7 @@ before_install:
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-gnueabi; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linaro-gnueabi-gcc-4.9" ]];then echo "$TRAVIS_CPU_ARCH" ; fi
   - echo  "$GCC_COMP"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
