--- a/.travis.yml
+++ b/.travis.yml
@@ -47,12 +47,13 @@ before_install:
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-gnueabi; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linaro-gnueabi-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then wget -c "https://releases.linaro.org/components/toolchain/binaries/latest-4/arm-linux-gnueabi/gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi.tar.xz"; tar xfJ gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi.tar.xz ; cd ./gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi; sudo cp -fR * /usr; cd ../; sudo rm -fR  ./gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi; fi; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linaro-gnueabi-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP=gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi; LINARO_WGET="latest-4/arm-linux-gnueabi"; fi; fi
   - echo  "$GCC_COMP"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
   - sudo apt-get update
   - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-gnueabi u-boot-tools
+  - if [[ "$LINARO_GCC_COMP" != "" ]];then wget -c "https://releases.linaro.org/components/toolchain/binaries/${LINARO_WGET}/${LINARO_GCC_COMP}.tar.xz"; tar xfJ ${LINARO_GCC_COMP}.tar.xz ; cd ./${LINARO_GCC_COMP}; sudo cp -fR * /usr; cd ../; sudo rm -fR  ./${LINARO_GCC_COMP}; fi;
   - export CROSS_COMPILE=arm-linux-gnueabi-
   - export ARCH=arm
   - if [[ "$GCC_COMP" != "" ]];then sudo ln -s /usr/bin/$TRAVIS_COMPILER /usr/bin/arm-linux-gnueabi-gcc; fi
