--- a/.travis.yml
+++ b/.travis.yml
@@ -43,23 +43,22 @@ env:
 
 before_install:
   # apt-get install
-  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-8" ]];then GCC_COMP=gcc-8-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-7" ]];then GCC_COMP=gcc-7-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linux-gnueabi-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-gnueabi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linaro-gnueabi-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP=gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabi; LINARO_WGET="latest-4/arm-linux-gnueabi"; fi; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linaro-gnueabihf-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP=gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabihf; LINARO_WGET="latest-4/arm-linux-gnueabihf"; fi; fi
+  - CROSS_PREFIX=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $3 }' `
+  - if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-8" ]];then GCC_COMP=gcc-8-arm-linux-${CROSS_PREFIX}; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-7" ]];then GCC_COMP=gcc-7-arm-linux-${CROSS_PREFIX}; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-${CROSS_PREFIX}; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-${CROSS_PREFIX}; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-${CROSS_PREFIX}; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linaro-${CROSS_PREFIX}-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP=gcc-linaro-4.9.4-2017.01-x86_64_${CROSS_PREFIX}; LINARO_WGET="latest-4/arm-linux-${CROSS_PREFIX}"; fi; fi
   - echo  "$GCC_COMP"
-  - echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $1"-"$2"-"$3 }'
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
   - sudo apt-get update
-  - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-gnueabi u-boot-tools
+  - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-${CROSS_PREFIX} u-boot-tools
   - if [[ "$LINARO_GCC_COMP" != "" ]];then wget -c "https://releases.linaro.org/components/toolchain/binaries/${LINARO_WGET}/${LINARO_GCC_COMP}.tar.xz"; tar xfJ ${LINARO_GCC_COMP}.tar.xz ; cd ./${LINARO_GCC_COMP}; sudo cp -fR * /usr; cd ../; sudo rm -fR  ./${LINARO_GCC_COMP}; fi;
-  - export CROSS_COMPILE=arm-linux-gnueabi-
+  - export CROSS_COMPILE=${CROSS_PREFIX}-
   - export ARCH=arm
-  - if [[ "$GCC_COMP" != "" ]];then sudo ln -s /usr/bin/$TRAVIS_COMPILER /usr/bin/arm-linux-gnueabi-gcc; fi
+  - if [[ "$GCC_COMP" != "" ]];then sudo ln -s /usr/bin/$TRAVIS_COMPILER /usr/bin/${CROSS_PREFIX}; fi
   - export CPU_COUNT=`cat /proc/cpuinfo | grep -c processor`
   - export JOB_NUMBER=`expr $CPU_COUNT + 1`
 
