--- a/.travis.yml
+++ b/.travis.yml
@@ -44,12 +44,13 @@ env:
 before_install:
   # apt-get install
   - CROSS_PREFIX=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $3 }' `
+  - echo  "$CROSS_PREFIX"
   - if [[ $TRAVIS_COMPILER = "arm-linux-$CROSS_PREFIX-gcc-8" ]];then GCC_COMP=gcc-8-arm-linux-${CROSS_PREFIX}; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-$CROSS_PREFIX-gcc-7" ]];then GCC_COMP=gcc-7-arm-linux-${CROSS_PREFIX}; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-$CROSS_PREFIX-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-${CROSS_PREFIX}; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-$CROSS_PREFIX-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-${CROSS_PREFIX}; fi
   - if [[ $TRAVIS_COMPILER = "arm-linux-$CROSS_PREFIX-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-${CROSS_PREFIX}; fi
-  - if [[ $TRAVIS_COMPILER = "arm-linaro-$CROSS_PREFIX-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP=gcc-linaro-4.9.4-2017.01-x86_64_$CROSS_PREFIX; LINARO_WGET="latest-4/arm-linux-$CROSS_PREFIX"; fi; fi
+  - if [[ $TRAVIS_COMPILER = "arm-linaro-$CROSS_PREFIX-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP="gcc-linaro-4.9.4-2017.01-x86_64_$CROSS_PREFIX"; LINARO_WGET="latest-4/arm-linux-$CROSS_PREFIX"; fi; fi
   - echo  "$GCC_COMP"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
