--- a/.travis.yml
+++ b/.travis.yml
@@ -21,47 +21,47 @@ compiler:
   - arm-linaro-gnueabi-gcc-4.9
   - arm-linaro-gnueabihf-gcc-4.9  
   - arm-linux-gnueabi-gcc-5
-#  - arm-linux-gnueabi-gcc-6
-#  - arm-linux-gnueabi-gcc-7
+  - arm-linux-gnueabi-gcc-6
+  - arm-linux-gnueabi-gcc-7
 #  - arm-linux-gnueabi-gcc-8       
 env:
   - DEFCONF=CPS-MC341-ADSCX.novlan_defconfig
-#  - DEFCONF=CPS-MC341-ADSCX.1lan_defconfig
-#  - DEFCONF=CPS-MC341-ADSCX.2lan_defconfig
-#  - DEFCONF=CPS-MC341-DSX.novlan_defconfig
-#  - DEFCONF=CPS-MC341-DSX.1lan_defconfig
-#  - DEFCONF=CPS-MC341-DSX.2lan_defconfig
-#  - DEFCONF=CPS-MC341-AX.novlan_defconfig
-#  - DEFCONF=CPS-MC341-AX.1lan_defconfig
-#  - DEFCONF=CPS-MC341-AX.2lan_defconfig
-#  - DEFCONF=CPS-MC341-DS1X.novlan_defconfig
-#  - DEFCONF=CPS-MC341-DS1X.1lan_defconfig
-#  - DEFCONF=CPS-MC341-DS1X.2lan_defconfig        
-#  - DEFCONF=CPS-MCS341-DSX.novlan_defconfig
-#  - DEFCONF=CPS-MCS341-DSX.1lan_defconfig
-#  - DEFCONF=CPS-MCS341-DSX.2lan_defconfig
+  - DEFCONF=CPS-MC341-ADSCX.1lan_defconfig
+  - DEFCONF=CPS-MC341-ADSCX.2lan_defconfig
+  - DEFCONF=CPS-MC341-DSX.novlan_defconfig
+  - DEFCONF=CPS-MC341-DSX.1lan_defconfig
+  - DEFCONF=CPS-MC341-DSX.2lan_defconfig
+  - DEFCONF=CPS-MC341-AX.novlan_defconfig
+  - DEFCONF=CPS-MC341-AX.1lan_defconfig
+  - DEFCONF=CPS-MC341-AX.2lan_defconfig
+  - DEFCONF=CPS-MC341-DS1X.novlan_defconfig
+  - DEFCONF=CPS-MC341-DS1X.1lan_defconfig
+  - DEFCONF=CPS-MC341-DS1X.2lan_defconfig        
+  - DEFCONF=CPS-MCS341-DSX.novlan_defconfig
+  - DEFCONF=CPS-MCS341-DSX.1lan_defconfig
+  - DEFCONF=CPS-MCS341-DSX.2lan_defconfig
 
 before_install:
-  # apt-get install
+  #compiler settings
   - CROSS_PREFIX=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $3 }' `
-  - echo  "$CROSS_PREFIX"
   - LINARO_OR_LINUX=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $2 }' `
+  - CROSS_GCC_VERSION=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $5 }' `  
   - if [[ $LINARO_OR_LINUX = "linux" ]];then GCC_COMP=`echo "$TRAVIS_COMPILER" | awk -F'[-]' '{print $4"-"$5"-"$1"-"$2"-"$3 }' `; fi
-  #- if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-8" ]];then GCC_COMP=gcc-8-arm-linux-${CROSS_PREFIX}; fi
-  #- if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-7" ]];then GCC_COMP=gcc-7-arm-linux-${CROSS_PREFIX}; fi
-  #- if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-6" ]];then GCC_COMP=gcc-6-arm-linux-${CROSS_PREFIX}; fi
-  #- if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-5" ]];then GCC_COMP=gcc-5-arm-linux-${CROSS_PREFIX}; fi
-  #- if [[ $TRAVIS_COMPILER = "arm-linux-${CROSS_PREFIX}-gcc-4.7" ]];then GCC_COMP=gcc-4.7-arm-linux-${CROSS_PREFIX}; fi
   - if [[ $TRAVIS_COMPILER = "arm-linaro-${CROSS_PREFIX}-gcc-4.9" ]];then if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]];then LINARO_GCC_COMP="gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-${CROSS_PREFIX}"; LINARO_WGET="latest-4/arm-linux-${CROSS_PREFIX}"; fi; fi
   - echo  "$GCC_COMP"
+  # if you uses the old cross gcc-linux compiler, you need to add apt source old repositories. (no bionic source.list)
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main restricted" >> "/etc/apt/sources.list"
   - echo "deb http://archive.ubuntu.com/ubuntu/ xenial universe restricted" >> "/etc/apt/sources.list"
+  # apt update and install
   - sudo apt-get update
   - sudo apt-get install -y $GCC_COMP libncurses5-dev binutils-arm-linux-${CROSS_PREFIX} u-boot-tools
-  - if [[ "$LINARO_GCC_COMP" != "" ]];then wget -c "https://releases.linaro.org/components/toolchain/binaries/${LINARO_WGET}/${LINARO_GCC_COMP}.tar.xz"; tar xfJ ${LINARO_GCC_COMP}.tar.xz ; cd ./${LINARO_GCC_COMP}; sudo cp -fR * /usr; cd ../; sudo rm -fR  ./${LINARO_GCC_COMP}; fi;
+  # if you uses gcc-linaro, you download the binary compiler. 
+  - if [[ "$LINARO_OR_LINUX" = "linaro" ]];then wget -c "https://releases.linaro.org/components/toolchain/binaries/${LINARO_WGET}/${LINARO_GCC_COMP}.tar.xz"; tar xfJ ${LINARO_GCC_COMP}.tar.xz ; cd ./${LINARO_GCC_COMP}; sudo cp -fR * /usr; cd ../; sudo rm -fR  ./${LINARO_GCC_COMP}; fi;
   - export CROSS_COMPILE=arm-linux-${CROSS_PREFIX}-
   - export ARCH=arm
-  - if [[ "$GCC_COMP" != "" ]];then sudo ln -s /usr/bin/$TRAVIS_COMPILER /usr/bin/arm-linux-${CROSS_PREFIX}-gcc; fi
+  # if you uses the gcc-linux compiler, you create the soft link.
+  - if [[ "$LINARO_OR_LINUX" == "linux" ]];then sudo ln -s /usr/bin/$TRAVIS_COMPILER /usr/bin/arm-linux-${CROSS_PREFIX}-gcc; fi
+  # set to compile job cpu number.
   - export CPU_COUNT=`cat /proc/cpuinfo | grep -c processor`
   - export JOB_NUMBER=`expr $CPU_COUNT + 1`
 
